{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 26,
  "lineage": "08fcee07-3a7a-b884-ce46-406de41d14d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0731e931b315ef703",
            "domain": "vpc",
            "id": "eipalloc-0731e931b315ef703",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-125-85-251.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.85.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:internet-gateway/igw-055622a30e7856f74",
            "id": "igw-055622a30e7856f74",
            "owner_id": "184275157372",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-065b0b4e368c15fda"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "MyNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0731e931b315ef703",
            "connectivity_type": "public",
            "id": "nat-03c454b5c154b93cc",
            "network_interface_id": "eni-01232f8a66ef07b97",
            "private_ip": "10.0.0.36",
            "public_ip": "3.125.85.251",
            "subnet_id": "subnet-07f9e2f23a752d002",
            "tags": {
              "Name": "gwNAT"
            },
            "tags_all": {
              "Name": "gwNAT"
            }
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_subnet.pub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:route-table/rtb-0c1636b1a2dda5b76",
            "id": "rtb-0c1636b1a2dda5b76",
            "owner_id": "184275157372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03c454b5c154b93cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRoute"
            },
            "tags_all": {
              "Name": "PrivateRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b0b4e368c15fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.MyNAT",
            "aws_subnet.pub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:route-table/rtb-0999440213165e044",
            "id": "rtb-0999440213165e044",
            "owner_id": "184275157372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055622a30e7856f74",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute"
            },
            "tags_all": {
              "Name": "PublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b0b4e368c15fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0303c47509ea254e4",
            "route_table_id": "rtb-0c1636b1a2dda5b76",
            "subnet_id": "subnet-06f9a98deed8040a5"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.MyNAT",
            "aws_route_table.prtable",
            "aws_subnet.pr1",
            "aws_subnet.pub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b1edb53b159f67",
            "route_table_id": "rtb-0c1636b1a2dda5b76",
            "subnet_id": "subnet-07192f067fbb74139"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.MyNAT",
            "aws_route_table.prtable",
            "aws_subnet.pr2",
            "aws_subnet.pub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f8528a26878cc9d",
            "route_table_id": "rtb-0999440213165e044",
            "subnet_id": "subnet-07f9e2f23a752d002"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubtable",
            "aws_subnet.pub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fe4df0a20bc49d5",
            "route_table_id": "rtb-0999440213165e044",
            "subnet_id": "subnet-005db1fb6d118523e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubtable",
            "aws_subnet.pub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:subnet/subnet-06f9a98deed8040a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f9a98deed8040a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184275157372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrSub1"
            },
            "tags_all": {
              "Name": "PrSub1"
            },
            "vpc_id": "vpc-065b0b4e368c15fda"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:subnet/subnet-07192f067fbb74139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07192f067fbb74139",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184275157372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrSub2"
            },
            "tags_all": {
              "Name": "PrSub2"
            },
            "vpc_id": "vpc-065b0b4e368c15fda"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:subnet/subnet-07f9e2f23a752d002",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f9e2f23a752d002",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184275157372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSub1"
            },
            "tags_all": {
              "Name": "PubSub1"
            },
            "vpc_id": "vpc-065b0b4e368c15fda"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:subnet/subnet-005db1fb6d118523e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005db1fb6d118523e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184275157372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PubSub2"
            },
            "tags_all": {
              "Name": "PubSub2"
            },
            "vpc_id": "vpc-065b0b4e368c15fda"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:184275157372:vpc/vpc-065b0b4e368c15fda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b58a668c754b12cb",
            "default_route_table_id": "rtb-092514ee955e04919",
            "default_security_group_id": "sg-0a1f518d92b1b3af4",
            "dhcp_options_id": "dopt-0ca8be44e8c2878ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065b0b4e368c15fda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092514ee955e04919",
            "owner_id": "184275157372",
            "tags": {
              "Name": "testVPC"
            },
            "tags_all": {
              "Name": "testVPC"
            }
          }
        }
      ]
    }
  ]
}